tests/diagnostics/comments/doc_comments/blank_line_breaks_attachment/expect.txt
# exit: 1
input/main.coppice:1:1: error: doc comment must document a declaration
  /// This should not attach because of a blank line.
  ^
